Change functions to computed

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
               <h1>{{mainStateFullName}} Auto Transport</h1>
 
-              <p v-html="generateIntroParagraph()"></p>
+              <p v-html="introParagraph"></p>
 
               <p>Shipping a car from {{mainStateFullName}}? With all the websites and companies on the internet it can be a confusing process. We have the solution for you. We specialize in providing you with the best options and lowest prices for shipping your auto. By completing the form on this page or calling 1-800-590-6492, you will receive 10 quotes from different shipping companies to help you secure a low rate and a shipping schedule that works for you.</p>
 
