--- a/index.html
+++ b/index.html
@@ -31,132 +31,153 @@
 
           <!-- Select State -->
           <div class="field">
-              <label class="label">Main State</label>
-              <div class="control">
-                <div class="select">
-                  <select v-model="mainStateAbbreviation">
-                    <option
-                      v-for="state in allStates"
-                      :value="state.abbreviation">
-                        {{ state.name }}  
-                    </option>
-                  </select>
-                </div>
+            <label class="label">Main State</label>
+            <div class="control">
+              <div class="select">
+                <select v-model="mainStateAbbreviation" @change="getMainStateData">
+                  <option
+                    v-for="state in allStates"
+                    :value="state.abbreviation">
+                      {{ state.name }}  
+                  </option>
+                </select>
               </div>
             </div>
+          </div>
 
-            <!-- Select number of cities -->
-            <div class="field">
-              <div class="control">
-                <label class="label" for="random-city-number">Random City Number</label>
-                <input v-model="randomCityNumber" class="input" id="random-city-number" type="number">
-              </div>
+          <!-- Select number of cities -->
+          <div class="field">
+            <div class="control">
+              <label class="label" for="random-city-number">Random City Number</label>
+              <input v-model="randomCityNumber" class="input" id="random-city-number" type="number">
             </div>
+          </div>
 
-            <!-- Select number of body types -->
-            <div class="field">
-              <div class="control">
-                <label class="label" for="random-body-type-number">Random Body Type Number</label>
-                <input v-model="randomBodyTypeNumber" class="input" id="random-body-type-number" type="number">
-              </div>
+          <!-- Select number of body types -->
+          <div class="field">
+            <div class="control">
+              <label class="label" for="random-body-type-number">Random Body Type Number</label>
+              <input v-model="randomBodyTypeNumber" class="input" id="random-body-type-number" type="number">
             </div>
+          </div>
 
-            <!-- Select number of accessories -->
-            <div class="field">
-              <div class="control">
-                <label class="label" for="random-accessory-number">Random Accessory Number</label>
-                <input v-model="randomAccessoryNumber" class="input" id="random-accessory-number" type="number">
-              </div>
+          <!-- Select number of accessories -->
+          <div class="field">
+            <div class="control">
+              <label class="label" for="random-accessory-number">Random Accessory Number</label>
+              <input v-model="randomAccessoryNumber" class="input" id="random-accessory-number" type="number">
             </div>
+          </div>
 
-            <!-- Select number of rate impacts -->
-            <div class="field">
-              <div class="control">
-                <label class="label" for="random-rate-impact-number">Random Rate Impact Number</label>
-                <input v-model="randomRateImpactNumber" class="input" id="random-rate-impact-number" type="number">
-              </div>
+          <!-- Select number of rate impacts -->
+          <div class="field">
+            <div class="control">
+              <label class="label" for="random-rate-impact-number">Random Rate Impact Number</label>
+              <input v-model="randomRateImpactNumber" class="input" id="random-rate-impact-number" type="number">
             </div>
+          </div>
 
-            <!-- Generate Button -->
-            <a href="#" class="button is-medium is-success is-fullwidth"
-              @click="showAllContent"
-              v-if="showButton">
-                Generate Content
-            </a>
-
-            <!-- Main State -->
-              <div class="card"
-              v-if="showContent">
-              <div class="card-header">
-                <span class="card-header-title">Main State:</span>
-              </div>
-              <div class="card-content">
-                <span class="copy-content-single">
-                  {{mainStateFullName}}
-                </span>
-              </div>
+          <!-- Select number of shipping impacts -->
+          <div class="field">
+            <div class="control">
+              <label class="label" for="random-shipping-impact-number">Random Shipping Impact Number</label>
+              <input v-model="randomShippingImpactNumber" class="input" id="random-shipping-impact-number" type="number">
             </div>
+          </div>
 
-            <!-- Random Body Types -->
-            <div class="card"
-              v-if="showContent">
-              <div class="card-header">
-                <span class="card-header-title">Random Body Types:</span>
-              </div>
-              <div class="card-content">
-                <span class="copy-content-single">
-                  {{randomBodyTypes}}
-                </span>
-              </div>
-            </div>
+          <!-- Generate Button -->
+          <a href="#" class="button is-medium is-success is-fullwidth"
+            @click="generateContent"
+            v-if="showGenerateButton">
+              Generate Content
+          </a>
 
-            <!-- Random Accessories -->
-            <div class="card"
-              v-if="showContent">
-              <div class="card-header">
-                <span class="card-header-title">Random Accessories:</span>
-              </div>
-              <div class="card-content">
-                <ul class="list--styled list--3-rows">
-                  <li
-                    v-for="randomAccessory in randomAccessories">
-                      {{randomAccessory}}
-                  </li>
-                </ul>
-              </div>
+          <!-- Main State -->
+          <div class="card"
+          v-if="showContent">
+            <div class="card-header">
+              <span class="card-header-title">Main State:</span>
             </div>
+            <div class="card-content">
+              <span class="copy-content-single">
+                {{mainStateFullName}}
+              </span>
+            </div>
+          </div>
 
-            <!-- Random Rate Impacts -->
-            <div class="card"
-              v-if="showContent">
-              <div class="card-header">
-                <span class="card-header-title">Random Rate Impacts:</span>
-              </div>
-              <div class="card-content">
-                <ul class="list--styled list--3-rows">
-                  <li
-                    v-for="randomRateImpact in randomRateImpacts">
-                      {{randomRateImpact}}
-                  </li>
-                </ul>
-              </div>
+          <!-- Main State Random Top Ten Cities -->
+          <div class="card"
+            v-if="showContent">
+            <div class="card-header">
+              <span class="card-header-title">Main State Random Top Ten Cities:</span>
             </div>
+            <div class="card-content">
+              <span class="copy-content-single">
+                {{mainStateRandomTopTenCities}}
+              </span>
+            </div>
+          </div>
 
-            <!-- Random Shipping Impacts -->
-            <div class="card"
-              v-if="showContent">
-              <div class="card-header">
-                <span class="card-header-title">Random Shipping Impacts:</span>
-              </div>
-              <div class="card-content">
-                <ul class="list--styled list--3-rows">
-                  <li
-                    v-for="randomShippingImpact in randomShippingImpacts">
-                      {{randomShippingImpact}}
-                  </li>
-                </ul>
-              </div>
+          <!-- Random Body Types -->
+          <div class="card"
+            v-if="showContent">
+            <div class="card-header">
+              <span class="card-header-title">Random Body Types:</span>
             </div>
+            <div class="card-content">
+              <span class="copy-content-single">
+                {{randomBodyTypes}}
+              </span>
+            </div>
+          </div>
+
+          <!-- Random Accessories -->
+          <div class="card"
+            v-if="showContent">
+            <div class="card-header">
+              <span class="card-header-title">Random Accessories:</span>
+            </div>
+            <div class="card-content">
+              <ul class="list--styled list--3-rows">
+                <li
+                  v-for="randomAccessory in randomAccessories">
+                    {{randomAccessory}}
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Random Rate Impacts -->
+          <div class="card"
+            v-if="showContent">
+            <div class="card-header">
+              <span class="card-header-title">Random Rate Impacts:</span>
+            </div>
+            <div class="card-content">
+              <ul class="list--styled list--3-rows">
+                <li
+                  v-for="randomRateImpact in randomRateImpacts">
+                    {{randomRateImpact}}
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Random Shipping Impacts -->
+          <div class="card"
+            v-if="showContent">
+            <div class="card-header">
+              <span class="card-header-title">Random Shipping Impacts:</span>
+            </div>
+            <div class="card-content">
+              <ul class="list--styled list--3-rows">
+                <li
+                  v-for="randomShippingImpact in randomShippingImpacts">
+                    {{randomShippingImpact}}
+                </li>
+              </ul>
+            </div>
+          </div>
 
         </div>
         <div class="column is-8">
@@ -174,7 +195,7 @@
 
               <p>{{introParagraph}}</p>
 
-              <p>All the transport companies we work with have trucks in all parts of {{mainStateFullName}} including <strong>[STATE RANDOM CITIES]</strong>  several times a week. We check every auto shipping company to ensure they are fully insured, licensed and bonded through the US Department of Transportation. We check their history to ensure they have a spotless driving record and the experience to ensure your auto arrives in good condition and on time. Below are some of the {{mainStateFullName}} auto transports recently completed by our partners:</p>
+              <p>All the transport companies we work with have trucks in all parts of {{mainStateFullName}} including {{mainStateRandomTopTenCities}}, several times a week. We check every auto shipping company to ensure they are fully insured, licensed and bonded through the US Department of Transportation. We check their history to ensure they have a spotless driving record and the experience to ensure your auto arrives in good condition and on time. Below are some of the {{mainStateFullName}} auto transports recently completed by our partners:</p>
 
               <strong>
                 <ul class="list--styled list--2-rows">
@@ -227,7 +248,7 @@
 
               <p>The safety records and registration of all our partners can be easily found at Federal Motor Carrier Safety Administration and we recommend and welcome you to verify their information once you have selected a carrier. For even more reviews and information about our affiliated partners you can also check with the Better Business Bureau.</p>
 
-              <p>Our partners regularly have trucks in every location in {{mainStateFullName}} including <strong>[STATE RANDOM CITIES]</strong>.</p>
+              <p>Our partners regularly have trucks in every location in {{mainStateFullName}} including {{mainStateRandomTopTenCities}}.</p>
 
               Don’t waste any more of your time looking, allow our experienced partners to work for you. Our reliable partners have delivered thousands of vehicles from {{mainStateFullName}}.
 
