--- a/index.html
+++ b/index.html
@@ -219,8 +219,6 @@
 
               <p>{{introParagraph}}</p>
 
-              <p>All the transport companies we work with have trucks in all parts of {{mainStateFullName}} including {{mainStateRandomTopTenCities}}, several times a week. We check every auto shipping company to ensure they are fully insured, licensed and bonded through the US Department of Transportation. We check their history to ensure they have a spotless driving record and the experience to ensure your auto arrives in good condition and on time. Below are some of the {{mainStateFullName}} auto transports recently completed by our partners:</p>
-
               <ul class="list--styled list--2-rows">
                 <li
                   v-for="randomTransport in randomTransports">
@@ -230,9 +228,7 @@
 
               <h2>{{mainStateFullName}} Auto Transport Rates</h2>
 
-              <p>Your car transport requirements greatly increase or decrease the cost of having your vehicle shipped. You can save a lot by choosing open transport rather than enclosed. Auto dealerships safely receive vehicles every day from open car carrier trailers. To save money we highly recommended this option unless of course you are shipping an irreplaceable luxury, high end sports car, or antique vehicle. Other important cost factors include the size, weight and type of car or truck.</p>
-
-              <p>The body type such as {{randomBodyTypes}} you are shipping, can also impact your rate. Usually the larger the vehicle the higher the shipping cost. If your vehicle has any non-standard accessories that have altered the size of your vehicle they can also increase the cost of shipping. Listed below are some of the accessories that can increase cost.</p>
+              <p>{{ratesParagraph1}}</p>
 
               <ul class="list--styled list--3-rows">
                 <li
@@ -241,12 +237,8 @@
                 </li>
               </ul>
 
-              <p>{{mainStateFullName}} auto shipping rates are calculated per mile and these rates change depending on the cost of fuel. Often you can save money by driving your vehicle to a shipping terminal and picking the vehicle up at another shipping terminal near your delivery address. This method can save you a lot of money but if you prefer or need the convenience of door to door delivery make sure that your pick-up and delivery addresses are both accessible by a commercial full-size tractor trailer.</p>
-
-              <p>If the vehicle you are shipping is not operational this will significantly raise your rate. The time of year also affects the rates of the auto transport shipping carriers, summer is high season and the rates are increased.</p>
-                
-              <p>The method of payment you choose to use for your vehicle delivery can sometimes affect your rate, as some companies prefer COD. Most carriers accept COD and credit cards. Some companies will provide a small discount if you pay with cash. Please check with the company first if you desire to pay with a check.</p>
-
+              <p>{{ratesParagraph2}}</p>
+            
               <h4>Quick Auto Transport Rates Guide</h4>
 
               <ul class="list--styled list--3-rows">
