Fix random city bug

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="card-content">
               <span class="copy-content-single">
-                {{mainStateRandomTopTenCities}}
+                {{mainStateRandomCities}}
               </span>
             </div>
           </div>
