Refactor code to ES6 and create Tier 3

--- a/tier-3.html
+++ b/tier-3.html
@@ -35,6 +35,8 @@
       <div class="columns">
         <div class="column is-4 is-fixed-xl">
 
+          <h2 class="app-subheading">Tier 3</h2>
+
           <!-- Select State -->
           <div class="field">
             <label class="label">Main State</label>
