Add relative link

--- a/tier-3.html
+++ b/tier-3.html
@@ -23,7 +23,7 @@
         <div class="columns">
           <div class="navigation column is-6 is-offset-3">
               <a href="/">Tier 2</a> &nbsp; | &nbsp;
-              <a href="/tier-3.html">Tier 3</a>
+              <a href="tier-3.html">Tier 3</a>
           </div>
         </div>
       </div>
