Add proper relative links

--- a/tier-3.html
+++ b/tier-3.html
@@ -22,8 +22,8 @@
         </div>
         <div class="columns">
           <div class="navigation column is-6 is-offset-3">
-              <a href="/">Tier 2</a> &nbsp; | &nbsp;
-              <a href="tier-3.html">Tier 3</a>
+              <a href="/auto-transport-generator/">Tier 2</a> &nbsp; | &nbsp;
+              <a href="/auto-transport-generator/tier-3.html">Tier 3</a>
           </div>
         </div>
       </div>
