--- a/tier-3.html
+++ b/tier-3.html
@@ -172,7 +172,7 @@
 
               <p>{{whyUsParagraph1}}</p>
 
-              <p>{{whyUsParagraph2}}</p>
+              <p v-html="whyUsParagraph2"></p>
 
               <h3>Shipping Process</h3>
               
